--- a/JavaScript/WebAPI/40.页面尺寸事件client家族和.html
+++ b/JavaScript/WebAPI/40.页面尺寸事件client家族和.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div>
+    <div class='b1'>11</div>
     qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
 </div>
 <script>
@@ -29,6 +30,8 @@
         console.log(1)
     })
 
+    const div1 =document.querySelector('.b1')
+    div1.addEventListener('')
 
 </script>
 </body>
