--- a/框架前置课/NodeJs/模块化/14/public/index.html
+++ b/框架前置课/NodeJs/模块化/14/public/index.html
@@ -7,6 +7,7 @@
   <title>前端-网页</title>
 </head>
 <body>
+<p>我是public下面的页面</p>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
     // 目标：请求本机 Web 服务提供的省份列表数据
